# libgooey

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  ENVELOPE_EDITOR.md  ENVELOPE_EDITOR_DEBUG.md  PLAN.md  README.md  build.rs  cbindgen.toml  hihat.prompt  test_envelope_editor.sh
.context/plans/: instrument-graph-dsl-plan.md
.github/workflows/: claude-code-review.yml  claude.yml  ios-release.yml  release.yml  tests.yml
debug-ui/app/: wasm-test.tsx
debug-ui/app/tabs/: hihat-tab.tsx  kick-drum-tab.tsx  oscillators-tab.tsx  snare-tab.tsx  tom-tab.tsx
docs/: mixer-graph-migration.md  tempo-warp-research.md
examples/: aliasing_plots.rs  antialias_validation.rs  bass.rs  bass_sequencer.rs  bounce.rs  chords.rs  delay.rs  envelope_editor.rs  granulator.rs  graph.rs  hihat.rs  hihat2.rs  hihat_sequencer.rs  hihat_sequencer_live.rs  keyboard.rs  kick.rs  lfo_test.rs  loop_mixer.rs  membrane.rs  midi_input.rs  midi_kick.rs  multi_channel_submix.rs  performance_record.rs  reverb.rs  reverb_lab.rs  sampler_rack.rs  sequencer.rs  sequencer_demo.rs  snare.rs  spectral.rs  tilt_filter.rs  tom.rs  tom2.rs
examples/common/: mod.rs
examples/instruments/: kick.graph  tone.graph
examples/programs/: lfo_test.gooey  sequencer.gooey
include/: module.modulemap
lib/src/: stage.rs
plans/: anti-aliasing-effects-plan.md  clip-scheduling-plan.md  diatonic-pitch-shifting-plan.md  granulator-original-design-gap-plan.md  performance-recording-plan.md  reverb-algorithms-plan.md  sampler-rack-abstraction-plan.md  stereo-effects-plan.md  stereo-future-work-plan.md  stereo-support-plan.md
scripts/: build-ios.sh  diatonic_pitch_shift.py  generate_test_chords.py
src/: audio_state.rs  bounce.rs  dsl.rs  envelope.rs  ffi.rs  frame.rs  lib.rs  main.rs  max_curve.rs  stage.rs  visualization.rs
src/effects/: compressor.rs  delay.rs  feedback_waveshaper.rs  limiter.rs  lowpass_filter.rs  mod.rs  plate_reverb.rs  reverb.rs  saturation.rs  soft_saturation.rs  spectral_resonator.rs  tilt_filter.rs  waveshaper.rs
src/engine/: engine_output.rs  lfo.rs  mod.rs  sequencer.rs
src/filters/: biquad_bandpass.rs  biquad_highpass.rs  membrane_resonator.rs  mod.rs  resonant_highpass.rs  resonant_lowpass.rs  state_variable.rs  state_variable_tpt.rs
src/graph/: mod.rs  node.rs  parser.rs
src/instruments/: bass.rs  fm_snap.rs  granulator.rs  hihat.rs  hihat2.rs  kick.rs  mod.rs  poly_synth.rs  sampler.rs  snare.rs  tom.rs  tom2.rs
src/mixer/: clip_grid.rs  effect_chain.rs  graph.rs  loop_channel.rs  mod.rs  stereo_buffer.rs  wsola.rs
src/music/: chord.rs  interval.rs  key.rs  mod.rs  note.rs  scale.rs  voicing.rs
src/performance/: mod.rs
src/platform/: cpal_output.rs  mod.rs
src/sequencer/: mod.rs  sequencer.rs
src/utils/: blendable.rs  logging.rs  mod.rs  oversampler.rs  smoother.rs  stft.rs  velocity.rs
src/visualization/: envelope_editor.rs  spectrogram.rs  waveform_display.rs
tests/: aliasing.rs  bounce.rs  channel_instrument_swap.rs  clip_grid.rs  drum_volume_linearity.rs  dsl.rs  effect_distortion_balance.rs  effect_order.rs  engine_basics.rs  ffi_gain_staging.rs  ffi_granulator.rs  ffi_stereo.rs  granulator.rs  graph_dsl.rs  instrument_gain.rs  lfo_modulation.rs  loop_mixer.rs  loop_render_wav.rs  mixer_graph.rs  mute_solo.rs  panning.rs  param_getters.rs  performance_recording.rs  sampler_rack.rs  sequencer_armed_start.rs  sequencer_triggers_enabled.rs  spectral_resonator.rs  stereo_effects.rs  volume_zero_mute.rs
