[package]
name = "gooey"
version = "0.1.0"
edition = "2021"
autoexamples = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["native"]
native = ["cpal"]
ios = []  # iOS target - no native audio output, just the engine
web = ["wasm-bindgen", "js-sys", "web-sys"]
crossterm = ["dep:crossterm"]
visualization = ["glfw", "gl", "rustfft"]

[build-dependencies]
cbindgen = "0.26"

[dependencies]
cpal = { version = "0.15", optional = true }
anyhow = "1.0"
clap = { version = "4.0", optional = true }
crossterm = { version = "0.27", optional = true }
glfw = { version = "0.58", optional = true }
gl = { version = "0.14", optional = true }
rustfft = { version = "6.2", optional = true }

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["AudioContext"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["AudioContext"] }

[[example]]
name = "kick"
required-features = ["native", "crossterm"]

[[example]]
name = "snare"
required-features = ["native", "crossterm"]

[[example]]
name = "hihat"
required-features = ["native", "crossterm"]

[[example]]
name = "tom"
required-features = ["native", "crossterm"]

[[example]]
name = "sequencer"
required-features = ["native", "crossterm"]

[[example]]
name = "lfo_test"
required-features = ["native", "crossterm"]