[package]
name = "gooey"
version = "0.1.0"
edition = "2021"
autoexamples = false

[lib]
name = "gooey"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["native"]
native = ["cpal"]
ios = []  # iOS target - no native audio output, just the engine
crossterm = ["dep:crossterm"]
visualization = ["glfw", "gl", "rustfft"]
midi = ["midir"]  # MIDI input support for examples

[profile.release]
panic = "unwind"

[build-dependencies]
cbindgen = "0.26"

[dependencies]
cpal = { version = "0.15", optional = true }
anyhow = "1.0"
clap = { version = "4.0", optional = true }
crossterm = { version = "0.27", optional = true }
glfw = { version = "0.58", optional = true }
gl = { version = "0.14", optional = true }
rustfft = { version = "6.2", optional = true }
midir = { version = "0.10", optional = true }

[[example]]
name = "kick"
required-features = ["native", "crossterm"]

[[example]]
name = "snare"
required-features = ["native", "crossterm"]

[[example]]
name = "hihat"
required-features = ["native", "crossterm"]

[[example]]
name = "hihat2"
required-features = ["native", "crossterm"]

[[example]]
name = "tom"
required-features = ["native", "crossterm"]

[[example]]
name = "sequencer"
required-features = ["native", "crossterm"]

[[example]]
name = "lfo_test"
required-features = ["native", "crossterm"]

[[example]]
name = "tom2"
required-features = ["native", "crossterm"]

[[example]]
name = "membrane"
required-features = ["native", "crossterm"]
